welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  if (a<10){return true};
  if (b<10){return true};
  if (c<10){return true};
  if (a<b){return true};
  if (b<c){return true};
  if (c<a){return true};
}